# turbolang

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
cpp/: Builder.cpp  Class.cpp  Compiler.cpp  Function.cpp  FunctionCallProcessor.cpp  FunctionInternal.cpp  LLVMManager.cpp  Logger.cpp  MathEvaluator.cpp  Parser.cpp  SourceCodeReader.cpp  TimeUtil.cpp  Tokenizer.cpp  Type.cpp  compilermanager.cpp  exiter.cpp  functioncallprocessor.cpp  functiondefinition.cpp  main.cpp  objectwrapper.cpp  parser.cpp  printer.cpp  scanner.cpp  sleeper.cpp  statement.cpp  timeutil.cpp  tokenizer.cpp  type.cpp
include/builder/: Builder.h
include/class/: Class.h
include/data/: Statement.h  functioncallprocessor.h  functiondefinition.h  parameterdefinition.h  statement.h  type.h
include/function/: Function.h  FunctionCallProcessor.h
include/function/internal/: FunctionInternal.h
include/math/: MathEvaluator.h
include/parser/: Parser.h  parser.h
include/token/: Token.h  Tokenizer.h
include/tokenizer/: Tokenizer.h  tokenizer.h
include/utils/: Compiler.h  DataType.h  Logger.h  SourceCodeReader.h  TimeUtil.h  Type.h  compilermanager.h  exiter.h  objectwrapper.h  printer.h  scanner.h  sleeper.h  stringhelper.h  timeutil.h
include/utils/llvm/: LLVMIncluder.h  LLVMManager.h
include/variable/: Variable.h
modules/: glfw.tl  glib.tl  io.tl  opengl.tl  vector.tl
samples/: main.tl
src/: Builder.cpp  Compiler.cpp  Function.cpp  MathEvaluator.cpp  Parser.cpp  SourceCodeReader.cpp  TimeUtil.cpp  Type.cpp  main.cpp
